--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
     "@radix-ui/themes": "^3.2.1",
-    "@supabase/supabase-js": "^2.89.0",
     "ai": "^6.0.3",
     "dagre": "^0.8.5",
+    "dotenv": "^17.2.3",
+    "firebase": "^12.7.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "react": "^18.3.1",
