--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "dagre": "^0.8.5",
+    "dexie": "^4.3.0",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.7.0",
