Added  for exporting workspace context as a standalone MCP server

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@streamdown/math": "^1.0.1",
     "@streamdown/mermaid": "^1.0.1",
     "@tanstack/react-table": "^8.21.3",
+    "@types/file-saver": "^2.0.7",
     "@xyflow/react": "^12.10.0",
     "ai": "^6.0.61",
     "ansi-to-react": "^6.2.6",
@@ -70,8 +71,10 @@
     "dexie": "^4.3.0",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
+    "file-saver": "^2.0.5",
     "firebase": "^12.7.0",
     "framer-motion": "^12.23.26",
+    "jszip": "^3.10.1",
     "lexical": "^0.39.0",
     "lodash": "^4.17.23",
     "lucide-react": "^0.562.0",
