--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,23 @@
-# Firebase Configuration
 VITE_FIREBASE_API_KEY=
 VITE_FIREBASE_AUTH_DOMAIN=
 VITE_FIREBASE_PROJECT_ID=
 VITE_FIREBASE_STORAGE_BUCKET=
 VITE_FIREBASE_MESSAGING_SENDER_ID=
 VITE_FIREBASE_APP_ID=
+
+POSTGRES_DB=pyramid
+POSTGRES_USER=pyramid_user
+POSTGRES_PASSWORD=pyramid_password
+POSTGRES_PORT=5432
+
+DATABASE_URL=postgresql://pyramid_user:pyramid_password@localhost:5432/pyramid
+POSTGRES_URL=postgresql://pyramid_user:pyramid_password@localhost:5432/pyramid
+
+QDRANT_HTTP_PORT=6333
+QDRANT_GRPC_PORT=6334
+QDRANT_URL=http://localhost:6333
+
+PGADMIN_PORT=5050
+PGADMIN_DEFAULT_EMAIL=admin@example.com
+PGADMIN_DEFAULT_PASSWORD=admin_password
+PGADMIN_URL=http://localhost:5050
